newclay/test/Compiler/StaticEvaluator/Fail/Private/main.clay
import tools.*;

define Main;
overload #Main() = PrivateFactorial(8);
